# libc-meson-skeleton

./: .gitignore  Readme.md  meson.build  meson_options.txt
src/: meson.build
src/gdtoa/include/: gdtoa.h  gdtoaimp.h
src/gdtoa/src/: dmisc.c  dtoa.c  g_Qfmt.c  g__fmt.c  g_ddfmt.c  g_dfmt.c  g_ffmt.c  g_xLfmt.c  g_xfmt.c  gdtoa.c  gethex.c  gmisc.c  hd_init.c  hexnan.c  misc.c  smisc.c  strtoIQ.c  strtoId.c  strtoIdd.c  strtoIf.c  strtoIg.c  strtoIx.c  strtoIxL.c  strtod.c  strtodI.c  strtodg.c  strtopdd.c  strtopf.c  strtorQ.c  strtord.c  strtordd.c  strtorf.c  strtorx.c  strtorxL.c  sum.c
subprojects/: cmocka.wrap  openlibm.wrap  printf.wrap
subprojects/packagefiles/openlibm/: meson.build
subprojects/packagefiles/printf/: meson.build
subprojects/packagefiles/printf/test/: meson.build
test/: meson.build
test/string/: memcmp.c  memcpy.c
tools/: clear_test_xml.sh  exec_program_with_env.sh  libc_tests_xml.sh
